--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ styling of the div tages
     border: none;
     width: 18em;
     background-color: white;
+    margin-top: px;
     height: 23em;
     border-radius: 30px;
     box-shadow: -30px 30px 20px rgba(0, 0, 0, 0.3);
@@ -130,7 +131,7 @@ right container styling texts
 
 .sc1{
     float: right;
-    margin-top: -60px;
+    margin-top: -64px;
     margin-right: 10px;
     font-weight: bold;
     color: rgba(31, 18, 34, 0.856);
@@ -176,7 +177,7 @@ second row
 
 .sc2{
     float: right;
-    margin-top: -60px;
+    margin-top: -63px;
     font-weight: bold;
     color: rgba(31, 18, 34, 0.856);
     margin-right: 10px;
@@ -207,7 +208,7 @@ third row c
 
 .sc3{
     float: right;
-    margin-top: -60px;
+    margin-top: -63px;
     margin-right: 10px;
     font-weight: bold;
     color: rgba(31, 18, 34, 0.856);
@@ -253,7 +254,7 @@ fourth row
 
 .sc4{
     float: right;
-    margin-top: -60px;
+    margin-top: -63px;
     margin-right: 10px;
     font-weight: bold;
     color: rgba(31, 18, 34, 0.856);
@@ -279,15 +280,31 @@ button:hover{
 }
 
 
-@media(min-width:375px)
+/** Media design for all screen sizes **/
+
+@media(min-width:200px)
 {
     #main-container{
-        width: 70%;
+        width: 90%;
         flex-wrap: wrap;
     }
 
     #right-container{
         box-shadow: none;
         margin-top: 30px;
+        margin-left: -20px;
     }
 }
+
+@media(min-width: 500px)
+{
+    #right-container{
+        margin-left: 20px;
+        margin-top: 20px;
+        box-shadow: 0;
+    }
+}
+
+
+
+
