--- a/style.css
+++ b/style.css
@@ -296,6 +296,35 @@ button:hover{
     }
 }
 
+@media(min-width: 196px)
+{
+    #main-container{
+        flex-wrap: wrap;
+        
+    }
+    #right-container{
+        margin-left: 10px;
+        margin-top: 20px;
+        box-shadow: 0;
+}
+
+}
+
+@media(min-width: 178px)
+{
+    #main-container{
+        flex-wrap: wrap;
+        
+    }
+    #right-container{
+        margin-left: 10px;
+        margin-top: 20px;
+        box-shadow: 0;
+}
+
+}
+
+
 @media(min-width: 500px)
 {
     #right-container{
