--- a/style.css
+++ b/style.css
@@ -287,6 +287,7 @@ button:hover{
     #main-container{
         width: 90%;
         flex-wrap: wrap;
+        margin-top: 30px;
     }
 
     #right-container{
@@ -304,20 +305,27 @@ button:hover{
 {
     #main-container{
         flex-wrap: wrap;
+        margin-top: 30px;
         
     }
     #right-container{
-        margin-left: 10px;
-        margin-top: 20px;
+        margin-left: -10px;
+        margin-top: 25px;
         box-shadow: 0;
 }
+
+#right-container{
+    margin-top: 20px;
+}
+
+
 
 }
 
 @media(min-width: 178px)
 {
     #left-container{
-        margin-top: 15px;
+        margin-top: 30px;
     }
 
     #main-container{
@@ -338,7 +346,7 @@ button:hover{
     #left-container{
         margin-top: 15px;
     }
-    
+
     #right-container{
         margin-left: 20px;
         margin-top: 20px;
